<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.icetech.tradipro.HomeActivity" >
    
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_appshare"
        app:showAsAction="ifRoom|withText"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item
        android:id="@+id/action_viewlanguages"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/action_available"
        app:showAsAction="ifRoom|withText"/>
    
    <item
        android:id="@+id/action_editLanguage"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_editlang"
        app:showAsAction="always"/>
    
    <item
        android:id="@+id/action_forums"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/action_langforums"
        app:showAsAction="always"/>
    
   <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/stat_notify_sync"
        android:title="@string/updatestr"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_editprofile"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_editprofile"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="Apropos"
        app:showAsAction="ifRoom|withText"/>
</menu>
