<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mscroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.icetech.tradipro.ProfileSettingsActivity$PlaceholderFragment" >

        <EditText
            android:id="@+id/pref_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultLanguage"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/lang1Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langueOption1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/lang2Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langueOption1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/lang3spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/new_language_description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/autoBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:onClick="setAutoPref" />
        </LinearLayout>
        
      <!--   <com.larswerkman.colorpicker.ColorPicker
		android:id="@+id/mcolorpicker"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"/>  -->

        <Spinner
            android:id="@+id/theme_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:entries="@array/theme_local"
            android:prompt="@string/action_langtheme" />

        <Button
            android:id="@+id/btnSavePref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:text="@string/save" />
    </LinearLayout>

</ScrollView>
