<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/layoutlinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0976B9"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.icetech.tradipro.SignupActivity$PlaceholderFragment" >

        <EditText
            android:id="@+id/usernameTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_user"
            android:ems="10"
            android:hint="@string/username" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_password"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_user"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/email"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultLanguage"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/defaultLanguageSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/lang_local"
            android:prompt="@string/defaultLanguage" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langueOption1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/altLanguageSpinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/lang_local"
            android:prompt="@string/langueOption1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langueOption1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/altLanguageSpinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/lang_local"
            android:prompt="@string/langueOption1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/btn_register" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_text"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>
